Fix Video Positioning Issue
Fixed issue where video will be cropped instead of resized on windows with different size

--- a/event-styles.css
+++ b/event-styles.css
@@ -4,10 +4,18 @@
     text-align: center;
 }
 
-.video-container{
+.video-container {
+    position: relative;
+    width: 100%;
     height: 100vh;
-    overflow: hidden;
 }
+
+.video-container video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+  
 
 .description-container{
     flex: 1;
